<resources>
    <string name="app_name">MFI Mobile</string>

    <!-- Strings related to login -->
    <string name="prompt_user_id">User Id</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_user_id">This user id is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing user id
        completions."
    </string>

    <!-- String related to Home Screen-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="title_main_menu_1">Collections</string>
    <string name="title_main_menu_2">Loan Application</string>
    <string name="title_main_menu_3">Cash to Cash</string>
    <string name="title_main_menu_4">Cash In</string>
    <string name="title_main_menu_5">Cash Out</string>

    <string name="action_submit">Submit</string>
    <string name="action_next">Next</string>

    <!-- Strings related to Menu 1 -->
    <string name="prompt_account_id">Account id</string>
    <string name="prompt_id_card">Id Card</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_amount">Amount</string>
    <string name="prompt_reference">Reference</string>

    <!-- Strings related to Menu 4 -->
    <string name="prompt_sender_name">Sender Name</string>
    <string name="prompt_sender_address">Sender Address</string>
    <string name="prompt_sender_phone">Sender Phone Number</string>
    <string name="prompt_receiver_name">Receiver Name</string>
    <string name="prompt_secret_code">Secret Code</string>
    <string name="prompt_retype_secret_code">Retype Secret Code</string>

    <!-- Strings related to Menu 5 -->
    <string name="prompt_token">Token</string>
</resources>
